Closed Bug 348643 Opened 18 years ago Closed 18 years ago

nsContentUtils / nsScriptableUnescapeHTML -- nsCRT::free considered harmful

Categories

(Firefox Graveyard :: RSS Discovery and Preview, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: sayrer, Assigned: sayrer)

References

()

Details

(Keywords: fixed1.8.1)

Attachments

(1 file, 1 obsolete file)

unless you used nsCRT:strdup or something. 

Should use NS_Free or something. Otherwise, crashes can result.
Attached patch don't use nsCRT::free (obsolete) — Splinter Review
Attached patch remove nsCRTSplinter Review
Attachment #233621 - Attachment is obsolete: true
Attachment #233628 - Flags: review+
Attachment #233628 - Flags: superreview?(bzbarsky)
Attachment #233628 - Flags: superreview?(bzbarsky) → superreview+
/cvsroot/mozilla/content/base/src/nsContentUtils.cpp,v  <--  nsContentUtils.cpp
new revision: 1.177; previous revision: 1.176
done
Checking in toolkit/components/feeds/src/nsScriptableUnescapeHTML.cpp;
/cvsroot/mozilla/toolkit/components/feeds/src/nsScriptableUnescapeHTML.cpp,v  <--  nsScriptableUnescapeHTML.cpp
new revision: 1.3; previous revision: 1.2
done
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Attachment #233628 - Flags: approval1.8.1?
Comment on attachment 233628 [details] [diff] [review]
remove nsCRT

a=beltzner on behalf of the 18 branch drivers
Attachment #233628 - Flags: approval1.8.1? → approval1.8.1+
Checking in content/base/src/nsRange.cpp;
/cvsroot/mozilla/content/base/src/nsRange.cpp,v  <--  nsRange.cpp
new revision: 1.189.2.5; previous revision: 1.189.2.4
done
Checking in toolkit/components/feeds/src/nsScriptableUnescapeHTML.cpp;
/cvsroot/mozilla/toolkit/components/feeds/src/nsScriptableUnescapeHTML.cpp,v  <--  nsScriptableUnescapeHTML.cpp
new revision: 1.1.2.4; previous revision: 1.1.2.3
done
Keywords: fixed1.8.1
Product: Firefox → Firefox Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: