Bug 348643. nsContentUtils / nsScriptableUnescapeHTML -- nsCRT::free considered harmful. r=timeless, sr=bz